--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             var mm = today.getMonth() + 1; //January is 0!
             var d = new Date();
             var weekday = new Array(7);
-            weekday[0] = "Sunday";
-            weekday[1] = "Monday";
-            weekday[2] = "Tuesday";
-            weekday[3] = "Wednesday";
-            weekday[4] = "Thursday";
-            weekday[5] = "Friday";
-            weekday[6] = "Saturday";
+            weekday[0] = "Domingo";
+            weekday[1] = "Segunda";
+            weekday[2] = "Terça";
+            weekday[3] = "Quarta";
+            weekday[4] = "Quinta";
+            weekday[5] = "Sexta";
+            weekday[6] = "Sábado";
 
             var n = weekday[d.getDay()];
             var yyyy = today.getFullYear();
@@ -108,7 +108,7 @@
                 mm = '0' + mm
             }
 
-            today = dd + '.' + mm + '.' + yyyy;
+            today = yyyy + '/' + mm + '/' + dd;
 
             date.innerHTML = n + "<br>" + today;
         </script>
