--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fi">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
@@ -15,13 +15,10 @@
     <!-- /time and date -->
 
     <!-- Weather from weatherwidget.io with inverse filter to make it white -->
-    <div class="weather">
-        <a class="weatherwidget-io" href="https://forecast7.com/en/60d1724d94/helsinki/" data-label_1="HELSINKI" data-label_2="WEATHER"
-            data-font="Roboto" data-icons="Climacons">Weather</a>
-        <script>
-            !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "https://weatherwidget.io/js/widget.min.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "weatherwidget-io-js");
-        </script>
-    </div>
+   <a class="weatherwidget-io" href="https://forecast7.com/pt/38d77n9d35/abrunheira/" data-label_1="ABRUNHEIRA" data-icons="Climacons" data-theme="weather_one" >ABRUNHEIRA</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
     <!-- /weather -->
     <br>
     <div class="grid">
